# hoshiri

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
old/hoshiri_v1/: ai.py  command_processor.py  config.py  database.py  hoshiri.py  utils.py
old/hoshiri_v1/data/: scripts_metadata.json
old/hoshiri_v1/modules/: list_my_unread_emails.py  the_code_you_generated_is_not_correct,_you_should_create_a_new_one.py
old/hoshiri_v1/tests/: test_hoshiri.py
old/hoshiri_v2/: __init__.py  anthropic_client.py  engine.py  main.py  registry.py
old/hoshiri_v2/data/: registry.json
old/hoshiri_v2/modules/: __init__.py  demo_module.py
old/hoshiri_v2/utils/: __init__.py  animations.py
